--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:theme="@style/Theme.FirstProject"
         tools:targetApi="31">
         <activity
+            android:name=".CityButton"
+            android:exported="false"
+            android:theme="@style/Theme.FirstProject" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
-            <!--android:label="@string/app_name">可能與應用程序的名稱相同或不需要特別的標題名稱，所以系統認為它是多餘的。-->
+
+            <!-- android:label="@string/app_name">可能與應用程序的名稱相同或不需要特別的標題名稱，所以系統認為它是多餘的。 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
